update session after login